--- a/codebook/tpw_references.bib
+++ b/codebook/tpw_references.bib
@@ -1,3 +1,12 @@
+# CINT COVID EPII
+
+@article{grasso2020epidemic,
+  title={The epidemic--pandemic impacts inventory (EPII)},
+  author={Grasso, Damion J and Briggs-Gowan, Margaret J and Ford, Julian D and Carter, AS},
+  journal={University of Connecticut School of Medicine},
+  year={2020}
+}
+
 # CINT Substances 
 
 @article{rhoades2014drug,
