--- a/codebook/tpw_references.bib
+++ b/codebook/tpw_references.bib
@@ -1,3 +1,27 @@
+# Sex Survey
+
+@article{capaldi2002heterosexual,
+  title={Heterosexual risk behaviors in at-risk young men from early adolescence to young adulthood: prevalence, prediction, and association with STD contraction.},
+  author={Capaldi, Deborah M and Stoolmiller, Mike and Clark, Sara and Owen, Lee D},
+  journal={Developmental psychology},
+  volume={38},
+  number={3},
+  pages={394},
+  year={2002},
+  publisher={American Psychological Association}
+}
+
+@article{smith2006adolescent,
+  title={Adolescent girls’ offending and health-risking sexual behavior: The predictive role of trauma},
+  author={Smith, Dana K and Leve, Leslie D and Chamberlain, Patricia},
+  journal={Child maltreatment},
+  volume={11},
+  number={4},
+  pages={346--353},
+  year={2006},
+  publisher={Sage Publications Sage CA: Thousand Oaks, CA}
+}
+
 # CINT COVID EPII
 
 @article{grasso2020epidemic,
